--- a/header/headerindex.html
+++ b/header/headerindex.html
@@ -12,6 +12,7 @@
 					<li><a href="index.php">Home</a></li>
 					<li><a href="index.php">About</a></li>
 					<li><a href="index.php">Contact</a></li>
+                    <li><a href="index.php">Touch</a></li>
 				</ul>
 
 				<div>
